--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/millenniumbrain/budget-commander#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7"
   }
 }
