--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "budget-commander",
-  "version": "1.0.0",
-  "description": "A budgeting application",
+  "name": "crash-nebula-boilerplate",
+  "version": "0.0.3",
+  "description": "Boilerplate for ruby roda projects",
   "main": "gulpfile.js",
+  "dependencies": {},
+  "devDependencies": {
+    "browserify": "^12.0.1",
+    "coffeeify": "^2.0.1",
+    "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "jquery": "^2.2.0",
+    "lodash": "^4.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/millenniumbrain/budget-commander.git"
+    "url": "git+https://github.com/millenniumbrain/crash-nebula-boilerplate.git"
   },
-  "author": "William Wilson",
+  "keywords": [
+    "ruby",
+    "coffee-script"
+  ],
+  "author": "Millennium Brain",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/millenniumbrain/budget-commander/issues"
+    "url": "https://github.com/millenniumbrain/crash-nebula-boilerplate/issues"
   },
-  "homepage": "https://github.com/millenniumbrain/budget-commander#readme",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7"
-  }
+  "homepage": "https://github.com/millenniumbrain/crash-nebula-boilerplate#readme"
 }
