--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "gulp-uglify": "^1.5.1",
     "jquery": "^2.2.0",
     "lodash": "^4.1.0",
+    "tsify": "^0.14.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
