--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "crash-nebula-boilerplate",
+  "name": "budget-commander",
   "version": "0.0.3",
-  "description": "Boilerplate for ruby roda projects",
+  "description": "Group budget and feedback application",
   "main": "gulpfile.js",
   "dependencies": {
     "moment": "^2.11.2"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
-    "coffeeify": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "jquery": "^2.2.0",
-    "lodash": "^4.1.0",
+    "jquery": "^2.2.3",
     "tsify": "^0.14.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
