--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Group budget and feedback application",
   "main": "gulpfile.js",
   "dependencies": {
+    "chart.js": "^2.0.2",
     "moment": "^2.11.2"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
+    "chart.js": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
