--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
     "module": "commonjs",
-    "moduleResolution": "node",
-    "isolatedModules": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": false,
-    "noImplicitAny": false,
-    "noImplicitUseStrict": false,
-    "removeComments": true,
-    "noLib": false,
-    "preserveConstEnums": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "strictNullChecks": false,
-    "outFile": "./public/js/dist/app.js"
-  },
-  "exclude": [
-    "node_modules",
-    "typings/browser",
-    "typings/browser.d.ts"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
-  },
-  "files": [
-    "public/ts/main.ts"
-  ]
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true
+  }
 }
